reverted back to wrking img links fixed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ img {
   /* overflow-wrap: break-word; */
   white-space: normal;
   line-height: 1.3;
+  padding: 5px;
   /* text-align: left !important; */
   /* line-height: 20px; */
 }
@@ -17,10 +18,9 @@ img {
   /* height: 30px; */
 }
 
-/* img {
-  width: 50%;
-  height: 50%;
-} */
+img {
+  margin: 10px auto;
+}
 
 .navbar-brand {
   font-weight: bold;
@@ -29,6 +29,18 @@ img {
 .msg-link {
   text-decoration: underline;
   margin-bottom: 2px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 .log-in:hover,
@@ -80,6 +92,23 @@ a {
   }
   .user-name {
     font-size: 14px;
+  }
+  .msg-link {
+    text-decoration: underline;
+    margin-bottom: 2px;
+    /* These are technically the same, but use both */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
   }
   .alert {
     font-size: 12px;
